# milterfrom

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  FindMilter.cmake  README.md  milterfrom.c  milterfrom.service
.github/workflows/: container-image.yml
cmake/: FindMilter.cmake
src/: milterfrom.c
systemd/: milterfrom.service.in
